# pyNMMS

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  nmms_acl_reasoner.py  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/base/: index.html
api/onto-base/: index.html
api/onto-syntax/: index.html
api/reasoner/: index.html
api/rq-base/: index.html
api/rq-reasoner/: index.html
api/rq-syntax/: index.html
api/syntax/: index.html
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
docs/docs/api/: base.md  reasoner.md  rq-base.md  rq-reasoner.md  rq-syntax.md  syntax.md
getting-started/: index.html
search/: search_index.json
src/pynmms/: __init__.py  base.py  reasoner.py  syntax.py
src/pynmms/cli/: ask.py  (+4 more)
tests/: conftest.py  test_base.py  test_cli.py  test_cli_json.py  test_cross_validation_role.py  test_logging.py  test_reasoner_axioms.py  test_reasoner_properties.py  test_reasoner_rules.py  test_reasoner_soundness.py  test_rq_base.py  test_rq_cli.py  test_rq_cli_json.py  test_rq_legacy_equivalence.py  test_rq_logging.py  test_rq_reasoner_properties.py  test_rq_reasoner_rules.py  test_rq_reasoner_soundness.py  test_rq_schemas.py  test_rq_syntax.py  test_syntax.py
tests/fixtures/: role_ground_truth.json
theory/nmms-calculus/: index.html
theory/onto-extension/: index.html
theory/rq-extension/: index.html
tutorial/chapter3-walkthrough/: index.html
tutorial/cli-usage/: index.html
tutorial/concepts/: index.html
tutorial/material-bases/: index.html
tutorial/onto-tutorial/: index.html
tutorial/proof-search/: index.html
tutorial/rq-tutorial/: index.html
(+12 files in other folders)
