[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyNMMS"
dynamic = ["version"]
description = "Non-Monotonic Multi-Succedent sequent calculus — propositional NMMS from Hlobil & Brandom 2025"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bradley P. Allen" },
]
keywords = ["logic", "sequent-calculus", "nonmonotonic", "reasoning", "inferentialism"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.scripts]
pynmms = "pynmms.cli.main:main"

[project.urls]
Homepage = "https://github.com/bradleyallen/nmms-reasoner"
Repository = "https://github.com/bradleyallen/nmms-reasoner"

[tool.hatch.version]
path = "src/pynmms/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pynmms"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
